[package]
name = "aprs-encode"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
git = "https://github.com/Ewpratten/aprs-encode"
description = "Small no_std library for encoding APRS packets"


[dependencies]
arrayvec = { version = "0.7.0", default_features = false }